# laval

./: .dockerignore  Caddyfile  Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/instructions/: tanstack-react-router_routing.instructions.md
.github/workflows/: deploy.yml
crates/client/: Cargo.toml
crates/client/src/: config.rs  main.rs  rathole_runner.rs
crates/manager/: Cargo.toml  Dockerfile
crates/manager/src/: config.rs  error.rs  main.rs
crates/manager/src/entity/: node.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: config.rs  main.rs  proxy.rs  rathole_runner.rs
crates/proto/: Cargo.toml  buf.yaml  build.rs
crates/proto/proto/: manager.proto
crates/proto/src/: lib.rs
crates/rathole/src/: config.rs  config_watcher.rs  lib.rs
crates/rathole/src/transport/: noise.rs
k8s/: .gitignore  README.md  laval.yaml
laval/: Chart.yaml  README.md  values.yaml
laval/templates/: configmap.yaml  deployment-frontend.yaml  deployment-manager.yaml  gateway.yaml  httproute.yaml  secret.yaml  service-db.yaml  service-frontend.yaml  service-manager.yaml  statefulset-db.yaml
