[workspace]
members = [
    "crates/node",
    "crates/client",
    "crates/manager",
    "crates/model",
    "crates/proto",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Laval Platform"]

[workspace.dependencies]
anyhow = "1.0.100"
actix-web = { version = "4.11.0", features = ["macros"] }
actix-cors = "0.7.1"
axum = { version = "0.8.5", features = ["macros"] }
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive", "env"] }
parking_lot = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.7"
thiserror = "2.0.17"
async-trait = "0.1.89"
http = "1.3.1"
log = "0.4"
derivative = "2.2.0"
h2 = "0.4.12"
once_cell = "1.21.3"
lru = "0.16.1"
ahash = "0.8.12"
httparse = "1.10.1"

# path dependencies for third-party crates shipped with the repository
pingora = { version = "0.6.0", default-features = false, features = ["proxy", "rustls", "time"] }
pingora-core = { version = "0.6.0", default-features = false, features = ["rustls"] }
pingora-proxy = { version = "0.6.0", default-features = false, features = ["rustls"] }
pingora-http = { version = "0.6.0" }
pingora-error = { version = "0.6.0" }
rathole = { path = "crates/rathole", default-features = false, features = ["server", "client", "noise"] }
tonic = { version = "0.14.2", features = ["transport"] }
tonic-web = "0.14.2"
tower-http = { version = "0.6.6", features = ["cors"] }
prost = "0.14.1"

