[package]
name = "laval-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rathole = { workspace = true }
parking_lot = { workspace = true }
laval-model = { path = "../model" }
