[package]
name = "laval-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
laval-model = { path = "../model" }
laval-proto = { path = "../proto" }
tonic = { workspace = true }
